--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <span class="glyphicon glyphicon-user"></span>
               </div>
               <div class="input-content">
-                <input type="text" name="user" id="fname" class="form-control" data-errormes="Please fill the field">
+                <input type="text" name="user" id="fname" class="form-control" data-type="Min 3 characters required." data-errormes="Please fill the field">
               </div>
             </div>
           </div>
@@ -48,7 +48,7 @@
                 <span class="glyphicon glyphicon-user"></span>
               </div>
               <div class="input-content">
-                <input type="text" name="user" id="lname" class="form-control" data-errormes="Please fill the field">
+                <input type="text" name="user" id="lname" class="form-control" data-type="Min 3 characters required." data-errormes="Please fill the field">
               </div>
             </div>
           </div>
@@ -61,7 +61,7 @@
                 <span class="glyphicon glyphicon-envelope"></span>
               </div>
               <div class="input-content">
-                <input type="text" name="email" id="email" class="form-control" data-errormes="Fill the correct email">
+                <input type="text" name="email" id="email" class="form-control" data-type="Fill the correct email address" data-errormes="Please fill the field">
               </div>
             </div>
           </div>
@@ -75,7 +75,7 @@
                 <span class="glyphicon glyphicon-lock"></span>
               </div>
               <div class="input-content">
-                <input type="password" name="pass_confirmation" id="password" class="form-control" data-errormes="Fill the password with min 8 characters">
+                <input type="password" name="pass_confirmation" id="password" class="form-control" data-type="Min 8 characters required with atleast one alphabet, one capital letter and one number"  data-errormes="Please fill the field">
               </div>
             </div>
           </div>
@@ -89,7 +89,7 @@
                 <span class="glyphicon glyphicon-lock"></span>
               </div>
               <div class="input-content">
-                <input type="password" name="pass" id="repassword" class="form-control" data-errormes="Fill the correct password">
+                <input type="password" name="pass" id="repassword" class="form-control" data-type="Pssword not matched" data-errormes="Please fill the field">
               </div>
             </div>
           </div>
@@ -136,7 +136,7 @@
                 <span class="glyphicon glyphicon-calendar"></span>
               </div>
               <div class="input-content">
-                <input type="text" id="datepicker" id="date" class="form-control" data-errormes="Fill the correct date">
+                <input type="text" id="datepicker" id="date" class="form-control" data-errormes="Please fill the field">
               </div>
             </div>
           </div>
@@ -168,7 +168,7 @@
                 <span class="glyphicon glyphicon-search"></span>
               </div>
               <div class="input-content">
-                <input id="tags" class="form-control" data-errormes="Fill the field">
+                <input id="tags" class="form-control" data-errormes="Please fill the field">
               </div>
             </div>
           </div>
