Change in password validation.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <span class="glyphicon glyphicon-lock"></span>
               </div>
               <div class="input-content">
-                <input type="password" name="pass_confirmation" id="password" class="form-control" data-type="Min 8 characters required with atleast one alphabet, one capital letter and one number"  data-errormes="Please fill the field">
+                <input type="password" name="pass_confirmation" id="password" class="form-control" data-type="Min 8 characters required" data-char="Atleast one small alphabet required" data-caps="Atleast one capital letter required" data-digit="Atleast one number required" data-specialchar="Atleast one special character required" data-errormes="Please fill the field">
               </div>
             </div>
           </div>
