Email validation through ajax.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <span class="glyphicon glyphicon-envelope"></span>
               </div>
               <div class="input-content">
-                <input type="text" name="email" id="email" class="form-control" data-type="Fill the correct email address" data-errormes="Please fill the field">
+                <input type="text" name="email" id="email" class="form-control" data-type="Fill the correct email address" data-notvalid="Email already exist" data-errormes="Please fill the field">
               </div>
             </div>
           </div>
