City dropdown added only when any state is selected through ajax.

--- a/index.html
+++ b/index.html
@@ -106,12 +106,15 @@
               <label>Select state :</label>
             </div>
             <div class="input-content">
-              <select class="drop">
+              <select class="drop" id="selectfield">
+                <option disabled selected>Please pick one</option>
                 <option value="Rajasthan">Rajasthan</option>
-                <option value="Mumbai">Mumbai</option>
-                <option value="Kerela">Kerela</option>
-                <option value="Goa">Goa</option>
+                <option value="Maharashtra">Maharashtra</option>
+                <option value="Gujrat">Gujrat</option>
+                <option value="Tamil nadu">Tamil nadu</option>
               </select>
+            </div>
+            <div class="input-content" id="select-response">
             </div>
           </div>
           <div style="display:none" class="pass-field form-content">
