--- a/index.html
+++ b/index.html
@@ -7,17 +7,14 @@
     <link rel="stylesheet" href="bower_components/bootstrap-select/dist/css/bootstrap-select.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css" />
-
     <!-- JS files -->
     <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <script src="bower_components/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="bower_components/remarkable-bootstrap-notify/dist/bootstrap-notify.min.js" type="text/javascript"></script>
     <script src="bower_components/bootstrap-select/dist/js/bootstrap-select.min.js" type="text/javascript"></script>
-
     <!-- Custom JS -->
     <script src="script.js"></script>
-
     <title>Registration</title>
   </head>
   <body>
@@ -176,9 +173,12 @@
               </div>
             </div>
           </div>
-          <div class="submit form-content">
-            <div class="input-content">
+          <div id="outer">
+            <div class="inner">
               <input type="button" value="Submit" id="form-submit" />
+            </div>
+            <div class="inner">
+              <input type="reset" value="Reset" id="form-reset" />
             </div>
           </div>
         </div>
